# tabbycat

./: .gitignore  README.md  pyproject.toml
src/tabbycat/: __init__.py
