[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tabbycat"]

[project]
name = "tabbycat"
description = "Tabulates and prints CSV and TSV data."
version = "2.0"
authors = [{ name = "Jahin Z.", email = "jahinzee@outlook.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Text Processing",
]

[project.scripts]
tabby = "tabbycat:main"

[project.urls]
Homepage = "https://github.com/jahinzee/tabbycat"
Repository = "https://github.com/jahinzee/tabbycat.git"
Issues = "https://github.com/jahinzee/tabbycat/issues"
